--- a/index.html
+++ b/index.html
@@ -1,34 +1,132 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Price Modifier</title>
-    <script>
-      function modify_price(price) {
-        var integer_part = parseInt(price);
-
-        // 如果個位數和十位數的組合小於50，將十位數設為8
-        // 否則，進位到下一個百位，將十位數設為2
-        if (integer_part % 100 < 50) {
-          var modified_integer = Math.floor(integer_part / 100) * 100 + 80;
-        } else {
-          var modified_integer =
-            (Math.floor(integer_part / 100) + 1) * 100 + 20;
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>報價計算器</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f8f8;
+            margin: auto;
+            padding: 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
-        return modified_integer;
-      }
+        .container {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            max-width: 400px;
+            box-sizing: border-box;
+        }
 
-      function calculate() {
-        var price = document.getElementById("price").value;
-        var result = modify_price(price);
-        document.getElementById("result").innerText =
-          "Modified price: " + result;
-      }
+        label {
+            font-size: 1.2em;
+            color: #333;
+            margin-bottom: 8px;
+            display: block;
+        }
+
+        input {
+            padding: 10px;
+            margin-bottom: 16px;
+            width: 100%;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        input[type="radio"] {
+            margin-right: 4px;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        #quotationResult {
+            font-size: 1.2em;
+            margin-top: 16px;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <label for="priceInput">請輸入價格：</label>
+    <input type="text" id="priceInput" placeholder="輸入價格">
+    
+    <br>
+
+    <input type="radio" name="productType" value="bag" id="bagType" checked>
+    <label for="bagType">包包</label>
+
+    <input type="radio" name="productType" value="other" id="otherType">
+    <label for="otherType">可愛的東東</label>
+
+    <br>
+
+    <button onclick="calculateQuotation()">計算</button>
+
+    <!-- 新增用於顯示報價價格的元素 -->
+    <div id="quotationResult"></div>
+
+    <script>
+        function modifyPrice(price) {
+            let integerPart = parseInt(price);
+
+            if (integerPart % 100 < 50) {
+                return Math.floor(integerPart / 100) * 100 + 80;
+            } else {
+                return (Math.floor(integerPart / 100) + 1) * 100 + 20;
+            }
+        }
+
+        function calculateQuotation() {
+            let inputElement = document.getElementById('priceInput');
+            let inputValue = parseFloat(inputElement.value.trim());
+
+            if (isNaN(inputValue) || inputValue <= 0) {
+                alert('請輸入有效的價格');
+                return;
+            }
+
+            let quotationPrice;
+            let productType = document.querySelector('input[name="productType"]:checked').value;
+
+            if (productType === 'bag') {
+                // 包包類別
+                quotationPrice = inputValue * 35 * 1.2;
+            } else {
+                // 其他類別
+                if (inputValue < 40) {
+                    quotationPrice = inputValue * 35 * 1.15;
+                } else if (inputValue > 40 && inputValue <= 100) {
+                    quotationPrice = inputValue * 35 * 1.1;
+                } else {
+                    quotationPrice = inputValue * 35 * 1.05;
+                }
+            }
+
+            let modifiedPrice = modifyPrice(quotationPrice);
+
+            // 將結果顯示在頁面上
+            let resultElement = document.getElementById('quotationResult');
+            resultElement.innerHTML = `報價價格：${modifiedPrice} 台幣`;
+        }
     </script>
-  </head>
-  <body>
-    <input type="number" id="price" placeholder="Enter price" />
-    <button onclick="calculate()">Calculate</button>
-    <p id="result"></p>
-  </body>
+</body>
 </html>
