--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <br>
 
-    <button onclick="calculateQuotation()">按下去會有報價呦</button>
+    <button onclick="calculateQuotation()">按下去會有報價呦 >< </button>
 
     <!-- 新增用於顯示報價價格的元素 -->
     <div id="quotationResult"></div>
