--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         button:hover {
-            background-color: #27ae60;
+            background-color: #94674E;
         }
 
         .form-floating label {
