--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
         button {
-            background-color: #2ecc71;
+            background-color: #94674E;
             color: #fff;
             padding: 12px 24px;
             font-size: 1.2em;
